# try

./: LICENSE  README.md
ionic_react_try/: capacitor.config.ts  ionic.config.json  package-lock.json  package.json
ionic_react_try/ios/App/App/: Info.plist
react_native_expo_try/: App.tsx  app.json  package-lock.json  package.json
try_lance/: .gitignore  README.md  head.jsonl  pyproject.toml  sqlite.db
try_lance/src/try_lance/: __init__.py  __main__.py
try_lance/t_w-rinkaku/: load.sql  postrelation.csv  schema.sql
tts_web_try/: README.md  app.yaml  bun.lockb  package-lock.json  package.json  tsconfig.json  wasmer.toml
tts_web_try/public/: index.html
tts_web_try/src/: index.js
tts_web_try/src/routes/: index.tsx
wasmer-python-sample/: index.html  package-lock.json  package.json  serve.ts  wasmer.mjs
web-speech-api-try/: biome.json  package-lock.json  package.json
web-speech-api-try/.create-qwik-1vb2lm2dh71/: package-lock.json
web-speech-api-try/src/: root.tsx
web-speech-api-try/src/routes/: index.tsx
web-speech-next.js/: bun.lockb  package.json
web-speech-next.js/src/app/: page.tsx
